# SpatialTimber_UtilityEval

./: CLAUDE.md  PLAN.md  README.md  SCORING.md  pyproject.toml
.claude/commands/: document.md
data/: data_manifest.json
grasshopper/: 07-cnn surrogate in grasshopper.gh  08-representation.gh  README.md  surrogate_score_lgbm.py  test_rooms.json
notebooks/: 09-01_speed_accuracy.ipynb
plans/: 03-eda.md  06-cnn-model.md  07-grasshopper.md  08-floor-plan-representation.md  09-accuracy-benchmark.md  10-simple-surrogate.md  11-daylight.md  12-circulation.md  13-combined-reward.md
reports/: 09-01_speed-accuracy-tradeoff.html  09-01_speed-accuracy-tradeoff.ipynb
results/: phase9_gh_timing_template.json  phase9_python_timing.json
scripts/: generate_benchmark_set.py
src/evaluation/: VALIDATE.md  validate.py
tests/: phase9_benchmark.json  test_validate.py
