[project]
name = "spatial-timber-utility-eval"
version = "0.1.0"
description = "Architectural utility evaluator — furnishability, daylight, and circulation reward functions for RL-based apartment layout design"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.7.0",
    "numpy",
    "scikit-learn",
    "lightgbm",
    "matplotlib",
    "jupyter",
    "wandb",
    "Pillow",
    "tqdm",
    "joblib",
    "umap-learn",
    "plotly",
    "minisom",
    "pandas",
    "seaborn",
]

[project.optional-dependencies]
inference = [
    "numpy",
    "Pillow",
    "torch>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
